--- a/addressbook-frontend/src/app/addressbook/addressbook.component.scss
+++ b/addressbook-frontend/src/app/addressbook/addressbook.component.scss
@@ -9,6 +9,7 @@ body, html {
   background-color: #f8f9fa;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   overflow-x: hidden;
+  padding-top: 88px;
 }
 
 /* Header Section */
